--- a/README
+++ b/README
@@ -5,6 +5,9 @@ Copyright (C) 2022 by Raymond E. Marcil <marcilr@gmail.com>
 
 Filelist
 ========
+git-crypt.html
+  git-crypt to encrypt git repository data
+
 git-crypt.txt
   git-crypt to encrypt git repository data
 
